data/derived/comb/progs/unify/prog1749.ml.out
Characters 145-146:
  (bigAdd a (mulByDigit (x * place) l1)) in
          ^
Error: This expression has type int * 'a
       but an expression was expected of type int list
